syntax = "proto3";

package Proto.Command.AiSettings;

option csharp_namespace = "Proto.Command.AiSettings";

service AiSettingsCommandService {
  rpc SendChangeLanguageModel (ChangeLanguageModelProtoCommand) returns (CommandResponse);
  rpc SendChangePrompt (ChangePromptProtoCommand) returns (CommandResponse);
  rpc SendCreateAiSettings (CreateAiSettingsProtoCommand) returns (CommandResponse);
}

message ChangeLanguageModelProtoCommand {
  string aiSettingsId = 1;
  string languageModelPath = 2;
}

message ChangePromptProtoCommand {
  string aiSettingsId = 1;
  string prompt = 2;
}

message CreateAiSettingsProtoCommand {
  string aiSettingsId = 1;
  string prompt = 2;
  string languageModelPath = 3;
}

message CommandResponse {
  bool success = 1;
}
